src/test/ui/impl-trait/issues/issue-88236-2.stderr
error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/issue-88236-2.rs:15:61
   |
LL | fn make_impl() -> impl for<'a> Hrtb<'a, Assoc = impl Send + 'a> {}
   |                                                             ^^
   |
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/issue-88236-2.rs:17:80
   |
LL | fn make_weird_impl<'b>(x: &'b ()) -> impl for<'a> Hrtb<'a, Assoc = impl Send + 'a> {
   |                                                                                ^^
   |
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/issue-88236-2.rs:21:78
   |
LL | fn make_bad_impl<'b>(x: &'b ()) -> impl for<'a> Hrtb<'a, Assoc = impl Send + 'a> {
   |                                                                              ^^
   |
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/issue-88236-2.rs:30:78
   |
LL | fn make_bad_impl_2<'b>(x: &'b ()) -> impl for<'a> Hrtb<'a, Assoc = impl Zend<'a>> {
   |                                                                              ^^
   |
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error: implementation of `Hrtb` is not general enough
  --> $DIR/issue-88236-2.rs:17:38
   |
LL | fn make_weird_impl<'b>(x: &'b ()) -> impl for<'a> Hrtb<'a, Assoc = impl Send + 'a> {
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Hrtb` is not general enough
   |
   = note: `Hrtb<'0>` would have to be implemented for the type `&()`, for any lifetime `'0`...
   = note: ...but `Hrtb<'1>` is actually implemented for the type `&'1 ()`, for some specific lifetime `'1`

error: implementation of `Hrtb` is not general enough
  --> $DIR/issue-88236-2.rs:21:36
   |
LL | fn make_bad_impl<'b>(x: &'b ()) -> impl for<'a> Hrtb<'a, Assoc = impl Send + 'a> {
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Hrtb` is not general enough
   |
   = note: `Hrtb<'1>` would have to be implemented for the type `&()`, for any lifetime `'1`...
   = note: ...but `Hrtb<'_>` is actually implemented for the type `&()`

error: implementation of `Hrtb` is not general enough
  --> $DIR/issue-88236-2.rs:30:38
   |
LL | fn make_bad_impl_2<'b>(x: &'b ()) -> impl for<'a> Hrtb<'a, Assoc = impl Zend<'a>> {
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Hrtb` is not general enough
   |
   = note: `Hrtb<'1>` would have to be implemented for the type `&()`, for any lifetime `'1`...
   = note: ...but `Hrtb<'_>` is actually implemented for the type `&()`

error: aborting due to 7 previous errors

